# linux-voice-assistant

./: .env.example  .gitignore  README.md  components.d.ts  config.js  correct.sh  helper-external.js  helper-inbrowser.js  helpers.js  index.html  main.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preload.js  renderer.js  run-ui.sh  tsconfig.json  update_storage.patch  vite.config.ts  vosk.js
_old/: EditorActions.vue  EditorInsertToolbar.vue  EditorTextToolbar.vue  Overlays.vue  ai.ts  functions.ts  legacy-correct.sh  tsconfig.json  useHandleKeys.ts  voiceRecognition.ts
common/: correct.ts  helpers.ts  useAiRequest.ts
electron/: ExternalCommands.ts  Tray.ts  ai.ts  api.ts  appConfig.ts  config.ts  functions.ts  helper-external.ts  helpers.ts  history.ts  index.html  main.ts  preload.ts  userConfigManager.ts  vosk.ts
src/: helper-external.ts  helper-inbrowser.js  index.html  main.ts  renderer.js  vosk.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: errors.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: app.rs  history.rs  llm.rs  mod.rs  voice.rs  whisper.rs  window.rs
src-tauri/src/services/: dbus.rs  mod.rs  runtime.rs  storage.rs  voice.rs
ui/: components.d.ts  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.check.json  tsconfig.json  vite.config.ts  vitest.config.ts
vue/: components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.check.json  tsconfig.json  tsconfig.vue.json  (+1 more)
(+345 files in other folders)
