[package]
name = "tyco"
version = "0.0.3"
description = "TyCo - typing AI companion for writers and professionals who work with texts a lot"
authors = ["Kozyrin Ivan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-single-instance = "2.4.1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.24"
zbus = "4"
